# quarto

./: .gitignore  README.md
c/: Board.cpp  Board.h  CMakeLists.txt  GameState.cpp  GameState.h  Piece.cpp  Piece.h  Player.cpp  Player.h  Quarto.cpp  Quarto.h  SearchAccumulator.cpp  SearchAccumulator.h  SearchResult.cpp  SearchResult.h  mquarto_main.cpp  pyquarto.i
py/: BGANotificationQueue.py  BGANotificationSession.py  BGANotifications.py  BGAQuarto.py  BGATable.py  BoardGameArena.py  bga_test.py  import_pyquarto.py  pyquarto_test.py  run_bga.py
